# wegmanager

./: .gitignore  .pylintrc  .pylintres_2022.01.27_16.10.28.txt  .pylintres_2022.01.31_11.33.17.txt  .readthedocs.yaml  CHANGELOG.rst  Pipfile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  debian-build  debian-build.yml
data/: bank_attributes.json  config.sample.ini
debian/: changelog  control  copyright  files  rules  start.sh  wegmanager.postinst  wegmanager.postrm  wegmanager.substvars
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
locale/: filelist
src/: wegmanager.py
src/controller/: AbstractController.py  AccountsController.py  Application.py  DbController.py  FinTS.py  TransactionController.py
src/model/: BankUser.py  Transaction.py
src/view/: Accounts.py  Form.py  Transactions.py
wegmanager/: __init__.py  build.env  wegmanager.desktop  wegmanager.py
wegmanager/controller/: AbstractController.py  AccountsController.py  Application.py  DbController.py  FinTS.py  InvoiceController.py  TransactionController.py  __init__.py  abstract_controller.py  accounts_controller.py  application.py  db_controller.py  fints.py  invoice_controller.py  report_controller.py  transaction_controller.py  util.py
wegmanager/model/: BankUser.py  Transaction.py  __init__.py  apartment.py  bank.py  bank_user.py  booking.py  building.py  business_partner.py  housing_account.py  invoice.py  transaction.py  transaction_audited.py
wegmanager/view/: AbstractTab.py  Accounts.py  Form.py  (+6 more)
(+24 files in other folders)
