[project]
name = "wegmanager"
version = "0.0.1"
description = "accounting software for appartments in ownership communities."
authors = [
    "Robert Hirsch <dev@robert-hirsch.de>"
]
license = "GPL-3.0-only"
readme = "README.rst"
python = "^3.8"
homepage = "https://github.com/hirschrobert/wegmanager"
repository = "https://github.com/hirschrobert/wegmanager"
documentation = "https://github.com/hirschrobert/wegmanager"

keywords = ["accounting", "apartment", "real estate"]

classifiers = [
    "Topic :: accounting"
]

# Requirements
[dependencies]
sqlalchemy = "1.4.29"
fints = "3.0.1"
Pillow = "9.0.0"
arrow = "1.2.1"

[dev-dependencies]
pylint = "*"
sphinx = "*"
sphinx-intl = "*"
sphinx-rtd-theme = "*"
pyinstaller = "*"